--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "mongoose": "^8.15.0"
